# av_atras

./: CMakeLists.txt  compute1.bag  compute2.bag  mpc_plugin.xml  package.xml
config/: MPCPlanner.cfg  amcl_params.yaml  ctrl_ackermann_steering_controller.yaml  local_costmap_params.yaml  teb_local_costmap_params.yaml  teb_local_planner_params.yaml
include/: mpc_plannner_ros.h
launch/: ackermann.launch  robot.launch  robot_description.launch  world.launch
matlab/: DATA PLOT MATLAB.xlsx  plot_grafik.m  scene_1.xlsx
msg/: state.msg
rosbag/: 12_june.bag  12_june_2.bag  12_june_3.bag  compute1(N=0.5,gagal).bag  compute2(N=0.75,berhasil).bag  compute3.bag  compute_2(N=0.75, berhasil).csv  compute_2(ambil mpc computasinya,horizon sj).csv  compute_3(N=1, berhasil).csv  ref_left_1_iter.xml  scene1.bag  scene1.csv  scene2.bag  scene2.csv  scene3.bag  scene3.csv  scene4.bag  scene4.csv  scene5.bag  scene5.csv  scene6.bag  scene6.csv  ulang1.bag  ulang2.bag  ulang3.bag
rviz/: robot_description.rviz  total_rviz_navigation.rviz
src/: AV_ESC.txt  MPC_Node.cpp  MPC_XY_Frame.py  car_hardware_interface.py  collect_data.py  computation.py  constants.py  controler_node.py  controller.cpp  controller_state_publisher.py  diff_to_ackermann.cpp  function.py  global_planner.cpp  hardware_interface.cpp  hardware_interface.py  kinematic_simulation.py  lpv_mpc_node.py  make.cpp  mpc_node.py  mpc_plannner.cpp  navMPC.cpp  navMPCNode.cpp  teleop.py  temp.py  trackRefTrajNode.cpp  visualize_velocity_profile.py
src/LPV_MPC/: constants.py  controller_state_publisher.py  function.py  matrix_set_mpc.py
urdf/: ackermann.urdf.xacro  ackermann_edit.urdf.xacro  wheel.xacro  wheel_edit.xacro
worlds/: map.world
